# PhoenixFL

./: .gitignore  README.md
prototype_1/: .gitignore  README.md  centralized.py  centralized_view.ipynb  mlp.py  plan.md  pre_process.py  pyproject.toml  requirements.txt
prototype_1/centralized/: README.md  analyser.py  calc_stats.sh  centralized-view.ipynb  centralized.py  centralized_helpers.py  centralized_training.py  charts.py  client-1-ton-view copy.ipynb  client-1-ton.py  client-2-bot-view.ipynb  client-2-bot.py  client-3-unsw-view.ipynb  client-3-unsw.py  client.ipynb  main.py  mlp.py  statistics.py  testing_global_model.py  training.sh  utils.py
prototype_1/datasets/: README.md  creating-train-test-datasets.py  grab-data.py  phoenix-stratified.py  popoola-stratified.py  pre-process-template.py
prototype_1/federated/: README.md  aggregate.py  aggregating_metrics.py  analyser.py  charts.py  client.py  combining.sh  create_strategy.py  custom_strategy.py  federated_helpers.py  fl_pipeline.sh  main.py  server.py  simulating.sh  simulation.py  strategies.py  tests.py  utils.py  utils_fl.py
prototype_1/local/: README.md  analyzer.py  charts.py  group_metrics.py  local_helpers.py  main.py
prototype_1/neural/: README.md  architectures.py  helpers.py  tests.py  train_eval.py  train_test.py
prototype_1/neural_helper/: README.md  mlp.py  tests.py
prototype_1/notebooks/: big-datasets-process.ipynb  datasets-process.ipynb  datasets-view.ipynb  datasets_view.ipynb  phoenix_view.ipynb
prototype_1/pre_process/: pre_process.py
prototype_1/stats/: client1.py  client2.py  client3.py
prototype_1/tunning/: helpers.py  main.py  momentum.py  results.txt  results_fnids.txt  results_momentum_popoola.txt  results_popoola.txt
prototype_2/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh
prototype_2/classifier-libtorch/: CMakeLists.txt  README.md  classifier.cpp  classifier.h
prototype_2/classifier_libtorch/: CMakeLists.txt  README.md  classifier.cpp  main.cpp
prototype_2/data/: fedavg_model.pt  (+2 more)
(+245 files in other folders)
