[tool.poetry]
name = "prototype-2"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
scikit-learn = "^1.5.1"
torch = "^2.4.0"
joblib = "^1.4.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
